--- a/sarkari.css
+++ b/sarkari.css
@@ -174,11 +174,17 @@ p:hover{
     color: white;
     
 }
-@media screen and (max-width:620px) {
+@media screen and (max-width:624px) {
 .navbar ul{
   text-align: center;
   justify-content: center;
 }
+
+.footer-distributed{
+  margin-top: 1820px;
+		
+}
+	
 .box{
 
 
